[JOST-111] - control metadata load with a scheduled job rather than on demand
[JOST-112] - Overuse of InclusivePrefixes list when signing
[JOST-116] - QueryDescriptorTypeImpl.getOrderedChildren() does not include children from superclass
[JOST-118] - Configure Apache XML Security library to not emit line breaks by default

Changes in Release 2.3.2
=============================================
[JOST-84] - FileBackedHTTPMetadataProvider takes inordinately long to time out
[JOST-98] - AttributeConsumingServices in SPSSODescriptorSchemaValidator
[JOST-101] - Expired message should be logged with WARN level instead of ERROR
[JOST-103] - Wrong log level for "Credential cache cleared"
[JOST-104] - Expired metadata element caused fatal IllegalArgumentException

Changes in Release 2.3.1
=============================================
[JOST-99] - Form generation vulnerable to XSS injection

Changes in Release 2.3.0
=============================================
[JOST-28] - BaseSAML1MessageDecoder and subclasses mistakenly take an ArtifactMap as a constructor arg
[JOST-69] - BasicSAMLArtifactMap dereferences a pointer that might be null
[JOST-76] - Relax requirement that HTTP requests be GETs when using Redirect and Artifact Binding
[JOST-77] - Metadata refresh causes ConcurrentModificationException and idp failure
[JOST-78] - Update libs for 2.2.4 release
[JOST-79] - StatusDetail builder is missing from saml2-protocol-config.properties file
[JOST-83] - Add object provider support for Condition for Delegation Restriction extension schema
[JOST-85] - metadata missing entityId causes NullPointerException
[JOST-86] - In absense of matching endpoint, IDP choose the first ACS in metadata.
[JOST-87] - In org.opensaml.saml2.binding.encoding.BaseSAML2MessageEncoder OutboundMessage should be compared against StatusResponseType instead of Response
[JOST-89] - Create XMLObject object provider for IdP Discovery Protocol endpoint
* Add object provider support for SAML 2 ECP schema
